[gd_scene load_steps=6 format=3 uid="uid://crbnugbqmmbui"]

[ext_resource type="Script" path="res://scripts/game logic/menu_ui.gd" id="1_vvhwc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glr2k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yc4bs"]
bg_color = Color(0.762404, 0.762404, 0.762404, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgx65"]
bg_color = Color(0.41598, 0.41598, 0.41598, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58ogm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="menu_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvhwc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -31.0
offset_right = 136.5
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26

[node name="start_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_glr2k")
theme_override_styles/hover = SubResource("StyleBoxFlat_yc4bs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rgx65")
theme_override_styles/normal = SubResource("StyleBoxFlat_58ogm")
text = "Start Game"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_glr2k")
theme_override_styles/hover = SubResource("StyleBoxFlat_yc4bs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rgx65")
theme_override_styles/normal = SubResource("StyleBoxFlat_58ogm")
text = "options
"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_glr2k")
theme_override_styles/hover = SubResource("StyleBoxFlat_yc4bs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rgx65")
theme_override_styles/normal = SubResource("StyleBoxFlat_58ogm")
text = "Exit Game
"

[connection signal="pressed" from="VBoxContainer/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
